--- a/index.html
+++ b/index.html
@@ -5,16 +5,93 @@
   <link rel="stylesheet" href="./resources/css/index.css" type="text/css">
 </head>
 <body>
-  <h1>FirstName LastName</h1>
-  <p>I'm learning to code on Codecademy! My goals include:</p>
-  <ul>
-    <li>Learn to code</li>
-    <li>Start a company</li>
-    <li>Help the world</li>
-  </ul>
-  <p>This is one of my favorite websites: <a href="https://www.google.com/" target="_blank">Google</a></p>
-
-
-
+  <header>
+    <div class="logo">
+      <img src="https://raw.githubusercontent.com/Generian/MyTimesCodecademy/master/resources/images/img-myt-logo.jpg" alt="My Times Logo">
+      <span>My Times</span>
+    </div>
+    <nav>
+      <span><a href="#">World</a></span>
+      <span><a href="#">U.S.</a></span>
+      <span><a href="#">Tech</a></span>
+      <span><a href="#">Science</a></span>
+    </nav>
+  </header>
+  <div class="container content">
+    <div class="column large container margin">
+      <div class="column">
+        <div class="image container img_main">
+          <span>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</span>
+        </div>
+        <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
+      </div>
+      <div class="container">
+        <div class="column margin">
+          <h2>Orca Spends Vacation at Land World Puget</h2>
+          <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+          <div class="image img_sub1">
+            <span>Earth Spins Backwards for 2017</span>
+          </div>
+        </div>
+        <div class="column">
+          <h2>Burger for Breakfast: How Early is too Early?</h2>
+          <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
+          <div class="image img_sub2">
+            <span>Research Shows Cameras Erase Memory</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="column container medium margin">
+      <div class="column">
+        <h2>FBI Finds Action Star Guilty of False Advertising</h2>
+        <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
+        <div class="image img_col2">
+          <span>Cats in Control-Is It a Thing?</span>
+        </div>
+        <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
+      </div>
+    </div>
+    <div class="column container small">
+      <div class="image img_cookie"></div>
+      <h3>NEWS BITES</h3>
+      <div class="news_bites column">
+        <div>
+          <a href="#">Cat Emoji Goes Viral</a>
+        </div>
+        <div>
+          <a href="#">Buy Youtube Views</a>
+        </div>
+        <div>
+          <a href="#">Home Business Advertising Ideas</a>
+        </div>
+        <div>
+          <a href="#">Advertising Internet Online</a>
+        </div>
+        <div>
+          <a href="#">Illustration in Marketing Materials</a>
+        </div>
+        <div>
+          <a href="#">Finally a Top Secret Way You Can</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer class="container">
+    <div class="container column">
+      <div class="container footer_line">
+        <span class="footer_logo">MY Times</span>
+        <nav>
+          <span><a href="#">World</a></span>
+          <span><a href="#">U.S.</a></span>
+          <span><a href="#">Tech</a></span>
+          <span><a href="#">Science</a></span>
+        </nav>
+      </div>
+      <div class="container footer_line">
+        <span>© 2016, My Times (A Division of Codecademy bite)</span>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
